Implemented node rom reader
We got the bytes in our program! Getting closer to running the boot rom properly 🤘

--- a/jest.config.json
+++ b/jest.config.json
@@ -13,5 +13,8 @@
   "collectCoverageFrom": [
     "src/**/*.{ts,js}",
     "!src/**/*.d.ts"
+  ],
+  "testPathIgnorePatterns":[
+    ".*/test-helpers/.*"
   ]
 }
