Implemented GPU integration
( ͡° ͜ʖ ͡°) nintendo screen here I come

--- a/jest.config.json
+++ b/jest.config.json
@@ -15,6 +15,7 @@
     "!src/**/*.d.ts"
   ],
   "testPathIgnorePatterns":[
-    ".*/test-helpers/.*"
+    ".*/test-helpers/.*",
+    ".*/system-test/.*"
   ]
 }
