--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "~10.5.7",
     "jest": "~23.4.2",
     "ts-jest": "~23.1.3",
+    "ts-node": "^7.0.1",
     "tslint": "~5.11.0",
     "tslint-microsoft-contrib": "~5.1.0",
     "tsutils": "~3.0.0",
@@ -19,6 +20,7 @@
   "scripts": {
     "build": "tsc -p tsconfig.json",
     "watch": "tsc -w -p tsconfig.json",
+    "start": "ts-node -D --skip-ignore test/system-test/gameboy-runner.ts",
     "test": "jest --coverage --config jest.config.json"
   },
   "author": "Marcel Visser <Marcel1337@hotmail.com>",
