--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/jest": ">= 23.3.1",
     "@types/node": "~10.5.7",
     "jest": "~23.4.2",
+    "node-ts": "^2.1.2",
     "ts-jest": "~23.1.3",
     "ts-node": "^7.0.1",
     "tslint": "~5.11.0",
