--- a/package.json
+++ b/package.json
@@ -7,16 +7,16 @@
     "node": ">= 8.9.0"
   },
   "devDependencies": {
-    "@types/jest": ">= 23.3.1",
-    "@types/node": "~10.5.7",
+    "@types/jest": "^24.0.11",
+    "@types/node": "^10.14.1",
     "jest": "~23.4.2",
     "node-ts": "^2.1.2",
-    "ts-jest": "~23.1.3",
+    "ts-jest": "^23.10.5",
     "ts-node": "^7.0.1",
     "tslint": "~5.11.0",
     "tslint-microsoft-contrib": "~5.1.0",
     "tsutils": "~3.0.0",
-    "typescript": "~3.0.1"
+    "typescript": "^3.3.3333"
   },
   "scripts": {
     "build": "tsc -p tsconfig.json",
